<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.SettingsActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black_blue">

    <ImageView
        android:id="@+id/back_settings_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/search_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/choose_module_download_type"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        tools:ignore="UselessParent">

        <Switch
            android:id="@+id/switch_foreground_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/GymSwitch"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/foreground_background"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"/>


    </LinearLayout>

</LinearLayout>